# KuiperLLama

./: .gitignore  CMakeLists.txt  dockerfile  readme.md
cmake/: cuda.cmake
demo/: CMakeLists.txt  chat_server.cpp  deepseek_qwen_infer.py  main.cpp  main_deepseek_llama.cpp  main_deepseek_qwen.cpp  main_llama3.cpp  main_qwen.cpp  main_qwen3.cpp  main_smollm.cpp  main_tinyllama.cpp
hf_infer/: llama3_infer.py  qwen2_infer.py
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h  tiktoken.h
kuiper/include/model/: config.h  deepseek_llama.h  deepseek_qwen.h  llama3.h  llama32.h  model.h  paged_kv_cache.h  qwen2.h  qwen3.h  raw_model_data.h  smollm.h  tinyllama.h  weight_loader.h
kuiper/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h
kuiper/include/sampler/: sampler.h  temperature_sampler.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
kuiper/source/model/: deepseek_llama.cpp  deepseek_qwen.cpp  llama3.cpp  llama32.cpp  model.cpp  paged_kv_cache.cpp  qwen2.cpp  qwen3.cpp  raw_model_data.cpp  smollm.cpp  tinyllama.cpp  weight_loader.cpp
kuiper/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  swiglu.cpp
kuiper/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
kuiper/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  scale_kernel.h  scale_sum_kernel.h  softmax_kernel.h  swiglu_kernel.h
kuiper/source/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh  temperature_sampler_kernel.cu  temperature_sampler_kernel.cuh
kuiper/source/sampler/: temperature_sampler.cpp
kuiper/source/tensor/: tensor.cpp
src/include/base/: alloc.h  base.h  buffer.h  tick.h  unicode.h
src/include/model/: config.h  deepseek_llama.h  deepseek_qwen.h  llama3.h  llama32.h  model.h  paged_kv_cache.h  qwen2.h  qwen3.h  smollm.h  tinyllama.h  weight_loader.h
src/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
src/include/sampler/: argmax_sampler.h
src/include/tensor/: tensor.h
src/source/base/: alloc_cpu.cpp  unicode.cpp
src/source/model/: llama3.cpp  llama32.cpp  raw_model_data.cpp  smollm.cpp  tinyllama.cpp  weight_loader.cpp
src/source/op/: embedding.cpp  layer.cpp  mha.cpp  rope.cpp
src/source/op/kernels/cpu/: add_kernel.h  emb_kernel.h  mha_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_sum_kernel.cpp  softmax_kernel.cpp  swiglu_kernel.cpp
src/source/op/kernels/cuda/: add_kernel.cuh  emb_kernel.cuh  matmul_kernel.cu  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  temperature_sampler_kernel.cuh
src/source/sampler/: argmax_sampler.cpp
test/: CMakeLists.txt  bench_operator_micro.cpp  test_main.cpp  utils.cu  utils.cuh
test/optimized/: test_allocator.cpp
test/test_cu/: test_cu_wrap.cpp
test/test_model/: test_llama_cpu.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
tools/: bootstrap_open_model_families.py  download_qwen3_8b_modelscope.py  export_llama.py  export_llama3.py  export_llama_family.py  export_qwen2.py  export_qwen2_family.py  export_qwen3.py  export_qwen3_awq.py  model.py  model_qwen2.py
tools/export_qwen3/: config.py  load.py  model.py  write_bin.py
