function(ensure_re2_target)
    # Some distro packages (e.g. libre2-dev) do not ship re2Config.cmake.
    # Prefer CMake package, then fallback to pkg-config.
    if (TARGET re2::re2)
        return()
    endif ()

    find_package(re2 CONFIG QUIET)
    if (TARGET re2::re2)
        return()
    endif ()

    find_package(PkgConfig REQUIRED)
    pkg_check_modules(RE2 REQUIRED re2)
    add_library(re2::re2 INTERFACE IMPORTED)
    target_include_directories(re2::re2 INTERFACE ${RE2_INCLUDE_DIRS})
    target_link_directories(re2::re2 INTERFACE ${RE2_LIBRARY_DIRS})
    target_link_libraries(re2::re2 INTERFACE ${RE2_LIBRARIES})
    target_compile_options(re2::re2 INTERFACE ${RE2_CFLAGS_OTHER})
endfunction()

add_executable(llama_infer main.cpp)
target_link_directories(llama_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama_infer llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT")
    find_package(absl REQUIRED)
    find_package(nlohmann_json REQUIRED)
    ensure_re2_target()
    target_link_libraries(llama_infer absl::base absl::strings re2::re2 nlohmann_json::nlohmann_json)
endif ()
set_target_properties(llama_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

if (QWEN2_SUPPORT)
    message(STATUS "LINK QWEN2 SUPPORT")
    add_executable(qwen_infer main_qwen.cpp)
    target_link_directories(qwen_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(nlohmann_json REQUIRED)
    ensure_re2_target()
    target_link_libraries(qwen_infer llama_qwen2)
    target_link_libraries(qwen_infer absl::base absl::strings re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()

if (QWEN3_SUPPORT)
    message(STATUS "LINK QWEN3 SUPPORT")
    add_executable(qwen3_infer main_qwen3.cpp)
    target_link_directories(qwen3_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    find_package(absl REQUIRED)
    find_package(nlohmann_json REQUIRED)
    ensure_re2_target()
    target_link_libraries(qwen3_infer llama_qwen3)
    target_link_libraries(qwen3_infer absl::base absl::strings re2::re2 nlohmann_json::nlohmann_json)
    set_target_properties(qwen3_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()
